Lab_1/Ejercicio_3/audio/build/log/idf_py_stdout_output_19953
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] cd /Users/xavierporre/Desktop/BNEX/Rep_SE_202601_grupo_1/Lab_1/Ejercicio_3/audio/build/bootloader && /Users/xavierporre/esp/idf-tools/python_env/idf6.1_py3.12_env/bin/python /Users/xavierporre/esp/idf/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/xavierporre/Desktop/BNEX/Rep_SE_202601_grupo_1/Lab_1/Ejercicio_3/audio/build/bootloader/bootloader.bin
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/audio.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/audio.c.obj 
/Users/xavierporre/esp/idf-tools/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.1-dev-2938-g12f36a021f\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/xavierporre/Desktop/BNEX/Rep_SE_202601_grupo_1/Lab_1/Ejercicio_3/audio/build/config -I/Users/xavierporre/Desktop/BNEX/Rep_SE_202601_grupo_1/Lab_1/Ejercicio_3/audio/main -I/Users/xavierporre/esp/idf/esp-idf/components/esp_libc/platform_include -I/Users/xavierporre/esp/idf/esp-idf/components/freertos/config/include -I/Users/xavierporre/esp/idf/esp-idf/components/freertos/config/include/freertos -I/Users/xavierporre/esp/idf/esp-idf/components/freertos/config/xtensa/include -I/Users/xavierporre/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/xavierporre/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/xavierporre/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/xavierporre/esp/idf/esp-idf/components/freertos/esp_additions/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/include/soc -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/ldo/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/etm/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/tuning_scheme_impl/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/mspi/mspi_intr/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/power_supply/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/modem/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/port/esp32s3/. -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/port/esp32s3/include -I/Users/xavierporre/esp/idf/esp-idf/components/heap/include -I/Users/xavierporre/esp/idf/esp-idf/components/heap/tlsf -I/Users/xavierporre/esp/idf/esp-idf/components/log/include -I/Users/xavierporre/esp/idf/esp-idf/components/soc/include -I/Users/xavierporre/esp/idf/esp-idf/components/soc/esp32s3 -I/Users/xavierporre/esp/idf/esp-idf/components/soc/esp32s3/include -I/Users/xavierporre/esp/idf/esp-idf/components/soc/esp32s3/register -I/Users/xavierporre/esp/idf/esp-idf/components/hal/platform_port/include -I/Users/xavierporre/esp/idf/esp-idf/components/hal/esp32s3/include -I/Users/xavierporre/esp/idf/esp-idf/components/hal/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_rom/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_rom/esp32s3/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/xavierporre/esp/idf/esp-idf/components/esp_rom/esp32s3 -I/Users/xavierporre/esp/idf/esp-idf/components/esp_common/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_system/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_system/port/soc -I/Users/xavierporre/esp/idf/esp-idf/components/esp_system/port/include/private -I/Users/xavierporre/esp/idf/esp-idf/components/esp_stdio/include -I/Users/xavierporre/esp/idf/esp-idf/components/xtensa/esp32s3/include -I/Users/xavierporre/esp/idf/esp-idf/components/xtensa/include -I/Users/xavierporre/esp/idf/esp-idf/components/xtensa/deprecated_include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hal_gpio/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hal_gpio/esp32s3/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hal_usb/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hal_usb/esp32s3/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hal_pmu/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hal_pmu/esp32s3/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hal_ana_conv/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hal_ana_conv/esp32s3/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hal_dma/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_hal_dma/esp32s3/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_driver_gpio/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_adc/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_adc/interface -I/Users/xavierporre/esp/idf/esp-idf/components/esp_adc/esp32s3/include -I/Users/xavierporre/esp/idf/esp-idf/components/esp_timer/include @"/Users/xavierporre/Desktop/BNEX/Rep_SE_202601_grupo_1/Lab_1/Ejercicio_3/audio/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/xavierporre/Desktop/BNEX/Rep_SE_202601_grupo_1/Lab_1/Ejercicio_3/audio=. -fmacro-prefix-map=/Users/xavierporre/esp/idf/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/audio.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/audio.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/audio.c.obj -c /Users/xavierporre/Desktop/BNEX/Rep_SE_202601_grupo_1/Lab_1/Ejercicio_3/audio/main/audio.c
/Users/xavierporre/Desktop/BNEX/Rep_SE_202601_grupo_1/Lab_1/Ejercicio_3/audio/main/audio.c: In function 'init_adc':
/Users/xavierporre/Desktop/BNEX/Rep_SE_202601_grupo_1/Lab_1/Ejercicio_3/audio/main/audio.c:31:18: error: 'ADC_ATTEN_DB_11' undeclared (first use in this function); did you mean 'ADC_ATTEN_DB_12'?
   31 |         .atten = ADC_ATTEN_DB_11
      |                  ^~~~~~~~~~~~~~~
      |                  ADC_ATTEN_DB_12
/Users/xavierporre/Desktop/BNEX/Rep_SE_202601_grupo_1/Lab_1/Ejercicio_3/audio/main/audio.c:31:18: note: each undeclared identifier is reported only once for each function it appears in
[4/10] Completed 'bootloader'
ninja: build stopped: subcommand failed.
